--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -7,3 +7,13 @@
 
 // 2. base
 @import "./base/typography";
+
+// 3. Components
+
+// 4. Layout
+
+// 5. Pages
+
+// 6. Themes
+
+@import "./themes/base_visitor";
