--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -84,7 +84,7 @@
             {# Main #}
 
             <main>
-            {% block Main %}{% endblock %}
+            {% block main %}{% endblock %}
             </main>
 
             {# Footer #}
