feat: Systeme de fonctionnalité mis en place

--- a/templates/pages/visitor/blog/index.html.twig
+++ b/templates/pages/visitor/blog/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block keywords %}Blog, Liste des articles, Médecine, Jean Dupont, Accueil{% endblock %}
 
-{% block Main %}
+{% block main %}
 
 <h1 class="text-center my-3 display-5">Liste des articles</h1>
 
