--- a/templates/pages/visitor/contact/index.html.twig
+++ b/templates/pages/visitor/contact/index.html.twig
@@ -1,11 +1,12 @@
 {% extends 'themes/base_visitor.html.twig' %}
 
 {% block title %}Contactez-moi{% endblock %}
+
 {% block description %}Contactez-moi pour plus d'informations{% endblock %}
 
 {% block keywords %}Contact, Blog, Médecine, Jean Dupont{% endblock %}
 
-{% block Main %}
+{% block main %}
 
 <h1 class="text-center my-3 display-5">Contactez-moi</h1>
 
