--- a/templates/pages/visitor/welcome/index.html.twig
+++ b/templates/pages/visitor/welcome/index.html.twig
@@ -1,10 +1,11 @@
 {% extends 'themes/base_visitor.html.twig' %}
+
 {% block title %}Acceuil{% endblock %}
 {% block description %}Découvrez le Blog de Jean Dupont sur la médecine{% endblock %}
 
 {% block keywords %}Blog, Médecine, Jean Dupont, Accueil{% endblock %}
 
-{% block Main %}
+{% block main %}
 
 <h1 class="text-center my-3 display-5">Accueil</h1>
 
