--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -70,12 +70,18 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
+                        {% if app.user %}
                             <li class="nav-item">
-                                <a class="nav-link">Connexion</a>
+                                <a href= "{{path('app_logout')}}" class="nav-link">Deconnexion</a>
+                            </li>
+                            <li class="nav-item">
+                        {% else %}
+                                <a href= "{{path('app_login')}}" class="nav-link">Connexion</a>
                             </li>
                             <li class="nav-item">
                                 <a href="{{path('app_register')}}" class="nav-link">Inscription</a>
                             </li>
+                        {% endif %}
                         </ul>
                     </div>
                 </div>
