--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -4,7 +4,7 @@
 
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>{% block title %}{% endblock %} - Blog de Jean Dupont</title>
+            <title>{% block title %}{% endblock %} · Blog santé du Dr Jean Dupont</title>
 
             {# SEO #}
             
@@ -35,13 +35,6 @@
             <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
             <link rel="manifest" href="/site.webmanifest" />
 
-            {# Google Font #}
-
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
-            {# Font Awesome #}
                     
         </head>
 
